GNOME Bugzilla – Bug 661088
gnome-session 3.2.0 crashes
Last modified: 2011-10-07 09:23:21 UTC
Created attachment 198436 [details] [review] patch fixing issue On Solaris, I find that gnome-session 3.2.0 crashes after I have logged in for about 30-60 seconds or so. The crash happens in this code in gsm-shell-extensions.c: - while (schemas != '\0') { if (g_str_equal (*schemas, SHELL_SCHEMA)) The crash happens in the call to g_str_equal when schemas is NULL. I find that changing the code as in the attached patch fixes this problem.
Review of attachment 198436 [details] [review]: ::: gnome-session-3.2.0/gnome-session/gsm-shell-extensions.c-orig @@ +257,3 @@ * for the existance of a schema, so hack around it. */ schemas = g_settings_list_schemas (); + while (schemas != NULL && schemas != '\0') The "schemas != '\0'" part sounds wrong anyway. Can you drop it and if it still works, commit?
I removed the "schemas != '\0'" part and that also avoids the crash. I am really hectic busy the next couple of weeks. Could a maintainer commit this very minor patch for me?
Fix pushed.