gsm: Fix crash on Solaris because of bad comparison

https://bugzilla.gnome.org/show_bug.cgi?id=661088